2002-06-14  Jan Nieuwenhuizen  <janneke@gnu.org>

	* GNUmakefile.in (short-examples):
	(long-examples): Bugfix for --srcdir build.

	* stepmake/bin/config.sub: 
	* stepmake/bin/config.guess: Update from latest autotools.

	* aclocal.m4:
	* autogen.sh: Regenerate.
	
	* configure.in: 
	* stepmake/configure.in: 
	* stepmake/aclocal.m4: Run autoupdate.  Creating ./configure now
	requires autoconf >= 2.50.

	* stepmake/autogen.sh: Check for autoconf >= 2.50.

	* Documentation/user/refman.itely: Bugfix for tablature example.

	* Documentation/windows/compiling.texi: Update for new and
	improved setup.

2002-06-14  Han-Wen Nienhuys  <hanwen@cs.uu.nl>

	* lily/spacing-spanner.cc (find_shortest): make 1/8 configurable:
	introduce base-shortest-duration

	* lily/parser.yy (music_output_def_body): don't crash when \tempo
	in unexpected \midi{} is found.

2002-06-13  Jan Nieuwenhuizen  <janneke@gnu.org>

	* stepmake/GNUmakefile.in: Don't install stepmake.  This breaks
	the use of make/ly.make for use as an external makefile.  Probably
	noone except for myself ever used this anyway.

	* stepmake/stepmake/GNUmakefile (INSTALLATION_DIR): Bugfix: Adapt
	to new $datadir convention (<package>/<version>).

2002-06-13  Han-Wen  <hanwen@cs.uu.nl>
	
	* Document/user/refman.itely: tablature doc and code updates by
	Jean-Baptiste Lamy <jiba@@tuxfamily.org>
	
	* input/template/piano-dynamics.ly: bugfixes.

	* lily/key-engraver.cc (try_music): read request only once. Don't
	overwrite lastKeySignature. Call create_key() only once. This
	fixes a bug with multiple equal key changes on polyphonic staffs.

2002-06-12  Mats Bengtsson  <mats.bengtsson@s3.kth.se>

	* scm/grob-description.scm: Add side-position-interface to TextSpanner

	* scm/grob-property-description.scm: Document the trill line type.

2002-06-12  Jan Nieuwenhuizen  <janneke@gnu.org>

	* stepmake/stepmake/generic-vars.make: 
	* make/lilypond-vars.make:
	* GNUmakefile.in (builddir-setup): New setup for builddir run.